<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="org.sopt.dosopttemplate.presentation.signup.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.main.MainActivity">

        <TextView
            android:id="@+id/tv_signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/signup_title"
            android:textColor="?colorOnBackground"
            android:textAppearance="?textAppearanceHeadlineLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/sv_signup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/btn_signup_signup"
            app:layout_constraintTop_toBottomOf="@id/tv_signup_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_signup_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/signup_id"
                    android:textAppearance="?textAppearanceBodySmall"
                    android:textColor="?colorOnBackground"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_signup_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="?colorOnBackground"
                    android:hint="@string/signup_id_hint"
                    android:inputType="text"
                    android:text="@={vm.id}"
                    validate="@{vm.idValidation}"
                    focus="@={vm.idFocus}"
                    android:textAppearance="?textAppearanceBody1"
                    android:textColor="?colorOnBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_signup_id" />

                <TextView
                    android:id="@+id/tv_signup_id_valid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    validate="@{vm.idValidation}"
                    validVisibility="@{vm.idFocus}"
                    app:layout_constraintTop_toBottomOf="@id/et_signup_id"
                    app:layout_constraintStart_toStartOf="@id/et_signup_id"/>

                <TextView
                    android:id="@+id/tv_signup_pw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/signup_pw"
                    android:textAppearance="?textAppearanceBodySmall"
                    android:textColor="?colorOnBackground"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_signup_id" />

                <EditText
                    android:id="@+id/et_signup_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="?colorOnBackground"
                    android:hint="@string/signup_pw_hint"
                    android:inputType="textPassword"
                    android:text="@={vm.pw}"
                    validate="@{vm.pwValidation}"
                    focus="@={vm.pwFocus}"
                    android:textAppearance="?textAppearanceBody1"
                    android:textColor="?colorOnBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_signup_pw" />

                <TextView
                    android:id="@+id/tv_signup_pw_valid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    validate="@{vm.pwValidation}"
                    validVisibility="@{vm.pwFocus}"
                    app:layout_constraintTop_toBottomOf="@id/et_signup_pw"
                    app:layout_constraintStart_toStartOf="@id/et_signup_pw"/>

                <TextView
                    android:id="@+id/tv_signup_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/signup_nickname"
                    android:textAppearance="?textAppearanceBodySmall"
                    android:textColor="?colorOnBackground"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_signup_pw" />

                <EditText
                    android:id="@+id/et_signup_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="?colorOnBackground"
                    android:hint="@string/signup_nickname_hint"
                    android:inputType="text"
                    android:text="@={vm.nickname}"
                    android:textAppearance="?textAppearanceBody1"
                    android:textColor="?colorOnBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_signup_nickname" />

                <TextView
                    android:id="@+id/tv_signup_hobby"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/signup_discription"
                    android:textAppearance="?textAppearanceBodySmall"
                    android:textColor="?colorOnBackground"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_signup_nickname" />

                <EditText
                    android:id="@+id/et_signup_hobby"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="?colorOnBackground"
                    android:hint="@string/signup_discription_hint"
                    android:inputType="text"
                    android:text="@={vm.hobby}"
                    android:textAppearance="?textAppearanceBody1"
                    android:textColor="?colorOnBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_signup_hobby" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


        <Button
            android:id="@+id/btn_signup_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="?colorPrimary"
            validateSignup="@{vm.signupValidation}"
            android:text="@string/signup_signup"
            android:textAppearance="?textAppearanceBodySmall"
            android:textColor="?colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>